--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="./style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
   <title>Projeto GIT</title>
 </head>
 <body>
   <h1>Hello World!</h1>
   <p>Lorem ipsum dolor sit amet</p>
+  <ul>
+    <li>list1</li>
+    <li>list2</li>
+  </ul>
+  <script src="./main.js" type="text/javascript"></script>
 </body>
 </html>
