--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <input type="number" name="anoNascimento" id="anoNascimento" placeholder="Digite seu ano de nascimento">
     <button type="submit">Calcular</button>
   </form>
+  <footer>&copy; Matheus Roichman 2022</footer>
   <script src="./main.js" type="text/javascript"></script>
 </body>
 </html>
